# Vitrine3D

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Dockerfile  README.MD  archive-creator.js  archive-loader.js  config.js  docker-compose.yml  eslint.config.js  index.html  main.js  package.json  release-notes.md  release-please-config-dev.json  release-please-config.json  share-dialog.js  styles.css  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.github/workflows/: docker-push.yml  release-please.yml  tauri-build.yml
docker/: Dockerfile  README.md  admin.html  config.js.template  docker-entrypoint.sh  extract-meta.sh  generate-nginx-conf.sh  meta-server.js  migrate-to-sqlite.js  nginx.conf  nginx.conf.template  package-lock.json  package.json  share-page.html
docs/: CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  KIOSK-VIEWER.md  PASS Viewer Pitch.docx  PITCH.md  ROADMAP.md  USAGE.md  archive-workflow.md  tauri_application.md
docs/archive/: ARCHIVE-GUIDE.md  METADATA.md  SPECIFICATION.md
docs/mockup/: design-mockup-kiosk-deliverable.html  editor-layout-v2.html
docs/plans/: 2026-03-02-deployment-restructure.md  (+64 more)
scripts/: build-branded.mjs  vendor-deps.mjs
src/: config.js  index.html  kiosk-web.ts  kiosk.css  main.js  main.ts  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.pass.conf.json
src-tauri/capabilities/: main-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: hooks.nsh  hooks.pass.nsh
(+193 files in other folders)
